--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
         <meta charset="utf-8">
         <title>Money 猜成语</title>
-        <link rel="icon" type="image/x-icon" href="/moneyword/static/favicon.ico">
-            <link rel="stylesheet" type="text/css" href="/moneyword/static/style.css">
+        <link rel="icon" type="image/x-icon" href="/guessidioms/static/favicon.ico">
+            <link rel="stylesheet" type="text/css" href="/guessidioms/static/style.css">
 </head>
 
 <body>
 
     <nav>
-        <ul><li><a href="/moneyword/">Home</a></li></ul>
+        <ul><li><a href="/guessidioms/">Home</a></li></ul>
     </nav>
 
     <main>
