--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
         <meta charset="utf-8">
+        <meta name="viewport" id="viewport-meta" content="width=device-width, initial-scale=1.0">
         <title>Money 猜成语</title>
         <link rel="icon" type="image/x-icon" href="/guessidioms/static/favicon.ico">
             <link rel="stylesheet" type="text/css" href="/guessidioms/static/style.css">
