--- a/index.html
+++ b/index.html
@@ -40,55 +40,77 @@
 </p>
 
 <p align="center">
-    <button onclick='addStroke("btn_k", "k")' id="btn_k" style="font-size:13px"> "点 丶" </button>
-    <button onclick='addStroke("btn_d", "d")' id="btn_d" style="font-size:13px"> "点（反向） ㇀" </button>
-    <button onclick='addStroke("btn_j", "j")' id="btn_j" style="font-size:13px"> "横 一" </button>
-    <button onclick='addStroke("btn_f", "f")' id="btn_f" style="font-size:13px"> "竖 丨" </button>
-    <br />
-    <button onclick='addStroke("btn_s", "s")' id="btn_s" style="font-size:13px"> "撇 丿" </button>
-    <button onclick='addStroke("btn_l", "l")' id="btn_l" style="font-size:13px"> "捺 ㇏" </button>
-    <button onclick='addStroke("btn_i", "i")' id="btn_i" style="font-size:13px"> "提 ㇀" </button>
-    <button onclick='addStroke("btn_b", "b")' id="btn_b" style="font-size:13px"> "竖弯 ㇄" </button>
-</p>
+<div class="flex-container">
+    <button onclick='addStroke("btn_k", "k")' id="btn_k" class="stroke_btn"> 点 丶 </button>
+    <button onclick='addStroke("btn_d", "d")' id="btn_d" class="stroke_btn"> 反点 ㇀ </button>
+    <button onclick='addStroke("btn_j", "j")' id="btn_j" class="stroke_btn"> 横 一 </button>
+    <button onclick='addStroke("btn_f", "f")' id="btn_f" class="stroke_btn"> 竖 丨 </button>
+</div>
 
-<p align="center">
-    <button onclick='addStroke("btn_c", "c")' id="btn_c" style="font-size:13px"> "横折 𠃍" </button>
-    <button onclick='addStroke("btn_g", "g")' id="btn_g" style="font-size:13px"> "竖钩 亅" </button>
-    <button onclick='addStroke("btn_n", "n")' id="btn_n" style="font-size:13px"> "撇折 𠃋" </button>
-    <button onclick='addStroke("btn_t", "t")' id="btn_t" style="font-size:13px"> "弯钩 ㇁" </button>
-    <br />
-    <button onclick='addStroke("btn_y", "y")' id="btn_y" style="font-size:13px"> "斜钩 ㇂ 卧钩 ㇃" </button>
-    <button onclick='addStroke("btn_e", "e")' id="btn_e" style="font-size:13px"> "横撇 ㇇ 横钩 乛" </button>
-    <button onclick='addStroke("btn_h", "h")' id="btn_h" style="font-size:13px"> "竖提 𠄌" </button>
-    <br />
-    <button onclick='addStroke("btn_m", "m")' id="btn_m" style="font-size:13px"> "撇点 𡿨" </button>
-    <button onclick='addStroke("btn_r", "r")' id="btn_r" style="font-size:13px"> "横折钩 𠃌" </button>
-    <button onclick='addStroke("btn_x", "x")' id="btn_x" style="font-size:13px"> "竖折撇 ㄣ 竖折折 𠃑" </button>
-</p>
+<div class="flex-container">
+    <button onclick='addStroke("btn_s", "s")' id="btn_s" class="stroke_btn"> 撇 丿 </button>
+    <button onclick='addStroke("btn_l", "l")' id="btn_l" class="stroke_btn"> 捺 ㇏ </button>
+    <button onclick='addStroke("btn_i", "i")' id="btn_i" class="stroke_btn"> 提 ㇀ </button>
+    <button onclick='addStroke("btn_b", "b")' id="btn_b" class="stroke_btn"> 竖弯 ㇄ </button>
+</div>
 
-<p align="center">
-    <button onclick='addStroke("btn_o", "o")' id="btn_o" style="font-size:13px"> "横斜钩 ⺄" </button>
-    <button onclick='addStroke("btn_v", "v")' id="btn_v" style="font-size:13px"> "横折折 ㇅ 横折弯 ㇍" </button>
-    <button onclick='addStroke("btn_p", "p")' id="btn_p" style="font-size:13px"> "横折提 ㇊" </button>
-    <br />
-    <button onclick='addStroke("btn_u", "u")' id="btn_u" style="font-size:13px"> "竖弯钩 乚 </button>
-    <button onclick='addStroke("btn_a", "a")' id="btn_a" style="font-size:13px"> "横折折撇 ㇋" </button>
-    <button onclick='addStroke("btn_z", "z")' id="btn_z" style="font-size:13px"> "竖折折钩 ㇉" </button>
-    <br />
-    <button onclick='addStroke("btn_q", "q")' id="btn_q" style="font-size:13px"> "横折折折 ㇎" </button>
-    <button onclick='addStroke("btn_w", "w")' id="btn_w" style="font-size:13px"> "横撇弯钩 ㇌ 横折折折钩 𠄎" </button>
+<div class="flex-container">
+    <button onclick='addStroke("btn_c", "c")' id="btn_c" class="stroke_btn"> 横折 𠃍 </button>
+    <button onclick='addStroke("btn_g", "g")' id="btn_g" class="stroke_btn"> 竖钩 亅 </button>
+    <button onclick='addStroke("btn_n", "n")' id="btn_n" class="stroke_btn"> 撇折 𠃋 </button>
+    <button onclick='addStroke("btn_t", "t")' id="btn_t" class="stroke_btn"> 弯钩 ㇁ </button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_h", "h")' id="btn_h" class="stroke_btn"> 竖提 𠄌 </button>
+    <button onclick='addStroke("btn_m", "m")' id="btn_m" class="stroke_btn"> 撇点 𡿨 </button>
+    <button onclick='addStroke("btn_r", "r")' id="btn_r" class="stroke_btn"> 横折钩 𠃌 </button>
+    <button onclick='addStroke("btn_o", "o")' id="btn_o" class="stroke_btn"> 横斜钩 ⺄ </button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_y", "y")' id="btn_y" class="stroke_btn"> 斜钩 ㇂ 卧钩 ㇃ </button>
+    <button onclick='addStroke("btn_u", "u")' id="btn_u" class="stroke_btn"> 竖弯钩 乚</button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_a", "a")' id="btn_a" class="stroke_btn"> 横折折撇 ㇋ </button>
+    <button onclick='addStroke("btn_z", "z")' id="btn_z" class="stroke_btn"> 竖折折钩 ㇉ </button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_p", "p")' id="btn_p" class="stroke_btn"> 横折提 ㇊ </button>
+    <button onclick='addStroke("btn_q", "q")' id="btn_q" class="stroke_btn"> 横折折折 ㇎ </button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_x", "x")' id="btn_x" class="stroke_btn"> 竖折撇 ㄣ 竖折折 𠃑 </button>
+    <button onclick='addStroke("btn_e", "e")' id="btn_e" class="stroke_btn"> 横撇 ㇇ 横钩 乛 </button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_v", "v")' id="btn_v" class="stroke_btn"> 横折折 ㇅ 横折弯 ㇍ </button>
+</div>
+
+<div class="flex-container">
+    <button onclick='addStroke("btn_w", "w")' id="btn_w" class="stroke_btn"> 横撇弯钩 ㇌ 横折折折钩 𠄎 </button>
+</div>
 </p>
 
 <div id="share-overlay" class="overlay hidden">
     <div class="overlay-content">
         <p align="center">
             输入成语，将 URL 发给朋友竞猜！
-            <br />
-            <input type="text" id="input_word" name="txt" minlength="4" maxlength="8" size="16"
-                style="width:150px;height:20px;">
-            <input type="button" value="生成" onclick="generateUrl()">
-            <br />
-            <input type="button" value="关闭" onclick="hideOverlay('share-overlay')">
+    </div>
+
+    <div class="flex-container">
+        <input type="text" id="input_word" name="txt" minlength="4" maxlength="8" size="16"
+            style="width:150px;height:20px;">
+        <input type="button" value="生成" onclick="generateUrl()">
+    </div>
+
+    <div class="flex-container">
+        <input type="button" value="关闭" onclick="hideOverlay('share-overlay')">
         </p>
     </div>
 </div>
